--- a/index.html
+++ b/index.html
@@ -4,9 +4,16 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>poor people</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <section id="header">
+        <div class="container">
+            <h1>Let’s Help Those Who Are 
+                More In Need</h1>
+        </div>
+    </section>
     
 </body>
 </html>
