--- a/index.html
+++ b/index.html
@@ -10,8 +10,12 @@
 <body>
     <section id="header">
         <div class="container">
-            <h1>Let’s Help Those Who Are 
-                More In Need</h1>
+            <div class="header-text">
+                <h1>Let’s Help Those Who Are <br>
+                    More In Need</h1>
+                    <p>Poverty is about not having enough money to meet basic needs including food, <br> clothing and shelter.  However, poverty is more, much more than just not having enough money. <br> Our mission is to break the cycle of poverty.</p>
+                    <a href="">Donate Now</a>
+            </div>
         </div>
     </section>
     
