--- a/index.html
+++ b/index.html
@@ -10,14 +10,38 @@
 <body>
     <section id="header">
         <div class="container">
-            <div class="header-text">
-                <h1>Let’s Help Those Who Are <br>
+             <div class="header-text">
+                  <h1>Let’s Help Those Who Are <br>
                     More In Need</h1>
                     <p>Poverty is about not having enough money to meet basic needs including food, <br> clothing and shelter.  However, poverty is more, much more than just not having enough money. <br> Our mission is to break the cycle of poverty.</p>
-                    <a href="">Donate Now</a>
-            </div>
+                        <a href="#">Donate Now</a>
+             </div>
         </div>
     </section>
+    <!--header section end-->
+    <section id="donate">
+             <div class="taka">
+                 <h1>Donate Today</h1>
+                 <p >Save lives. One of our steps can bring a smile <br> to everyone's face.</p>
+                    <div class="container">
+                        <div class="box">
+                            <h2>500tk</h2>
+                        </div>
+                        <div class="box color">
+                            <h2>800tk</h2>
+                        </div>
+                        <div class="box">
+                            <h2>1000tk</h2>
+                        </div>
+                        <div class="box">
+                            <h2>2000tk</h2>
+                        </div>
+                    </div>
+                 <p>other Amount(Taka)</p>
+             </div>
+                <a href="#">Donate Now</a>
+        </section>
+        
     
 </body>
 </html>
