--- a/index.html
+++ b/index.html
@@ -22,12 +22,15 @@
     <section id="donate">
              <div class="taka">
                  <h1>Donate Today</h1>
-                 <p >Save lives. One of our steps can bring a smile <br> to everyone's face.</p>
+                 <p >They are ignorant
+                    They are vulnerable
+                    They <br> need a helping hand 
+                    </p>
                     <div class="container">
                         <div class="box">
                             <h2>500tk</h2>
                         </div>
-                        <div class="box color">
+                        <div class="color">
                             <h2>800tk</h2>
                         </div>
                         <div class="box">
@@ -40,6 +43,29 @@
                  <p>other Amount(Taka)</p>
              </div>
                 <a href="#">Donate Now</a>
+        </section>
+        <!--donate section end-->
+        <section id="plan">
+            <div class="text">
+                <h1>Our Donate Plan</h1>
+            <p>The Happy meals. Happy Families program is aimed at providing families <br> with constant nutritious food supplies to ensure a healthy childhood <br> and bring them to mainstream education to lift the burden of poverty that has <br> plagued them for generations.</p>
+            </div>
+            <div class="basic">
+                <div class="need">
+                    <img src="icon/food.png" alt="">
+                    <h1 class="head">Food for a family</h1>
+                    <p>This project will provide highly-nutritious <br> meals for 3 months to 200 very poor and <br> severely malnourished children living <br> in Bangladesh</p>
+                </div>
+                <div class="family">
+                    <img src="icon/shelter.png" alt="">
+                    <h1 class="head">Shelter for a family</h1>
+                    <p>This project will provide highly-nutritious <br> meals for 3 months to 200 very poor and <br> severely malnourished children living <br> in Bangladesh</p>
+                </div>
+                <div class="child">
+                    <img src="icon/Frame-1.png" alt="">
+                    <h1 class="head">Education for a child</h1>
+                    <p>This project will provide highly-nutritious <br> meals for 3 months to 200 very poor and <br> severely malnourished children living <br> in Bangladesh</p>
+            </div>
         </section>
         
     
