--- a/index.html
+++ b/index.html
@@ -67,6 +67,25 @@
                     <p>This project will provide highly-nutritious <br> meals for 3 months to 200 very poor and <br> severely malnourished children living <br> in Bangladesh</p>
             </div>
         </section>
+        <section id="about">
+            <h1>WHO WE ARE</h1>
+            <div class="work">
+                <div class="word">
+                    <p>We are a charity. As said, we are a non-profit organization. We are a <br> peacemaker and helper. We help people around the world not only <br> poor people but in disease breakout and war. </p>
+                    <p>Recently, we have been honored by Prime Minister and for our <br> effort of helping people around the World. Some of the works that we <br> are conducting are as follow:</p>
+                    <ul>
+                        <li>Clearing the drinking water </li>
+                        <li>Helping people table the proverty </li>
+                        <li>Building houses for Old citizen</li>
+                        <li>Proving help to Earthquake victims</li>
+                    </ul>
+                    <a href="#">Read More</a>
+                </div>
+                <div class="image">
+                    <img src="img/jeffrey-eisen.jpg" alt="child" width="450px" height="400px">
+                </div>
+            </div>
+        </section>
         
     
 </body>
