--- a/index.html
+++ b/index.html
@@ -86,7 +86,26 @@
                 </div>
             </div>
         </section>
-        
-    
+        <section id="causes">
+            <h1>SOME CAUSES</h1>
+            <div class="service">
+                <div class="done">
+                    <img src="img/loren-joseph.jpg" alt="childhood" width="400px" height="350px">
+                    <h2>Educated Children</h2>
+                    <a href="#">Donate</a>
+                </div>
+                <div class="done">
+                    <img src="img/tadeusz-lakota.jpg" alt="child" width="400px" height="350px" >
+                    <h2>Educated Children</h2>
+                    <a href="#">Donate</a>
+                </div>
+                <div class="done">
+                    <img src="img/wilco-van-meppelen.jpg" alt="boy" width="400px" height="350px" >
+                    <h2>Educated Children</h2>
+                    <a href="#">Donate</a>
+                </div>
+            </div>
+        </section>
+        <!--causes end-->
 </body>
 </html>
