--- a/index.html
+++ b/index.html
@@ -107,5 +107,22 @@
             </div>
         </section>
         <!--causes end-->
+        <section id="update">
+            <h1>Get My Updates</h1>
+            <p>Lorem ipsum dolor sit amet, usu cu esse possit referrentur, at eam falli <br>
+                deterruisset. No duo populo animal noluisse, enim</p>
+                <div class="contact">
+                    <div class="email">
+                        <form action="">
+                            <input type="email" placeholder="Email">
+                            <a href="">subscribe</a>
+                        </form>
+                    </div>
+                </div>
+        </section>
 </body>
+<FOOter>
+    <h1>Be Humble</h1>
+    <p>i'm gonna do it</p>
+</FOOter>
 </html>
