--- a/index.html
+++ b/index.html
@@ -112,8 +112,7 @@
         <!--causes end-->
         <section id="update">
             <h1>Get My Updates</h1>
-            <p>Lorem ipsum dolor sit amet, usu cu esse possit referrentur, at eam falli <br>
-                deterruisset. No duo populo animal noluisse, enim</p>
+            <p>Contact and subscribe to get updates.</p>
                 <div class="contact">
                     <div class="email">
                         <form action="">
@@ -123,6 +122,7 @@
                     </div>
                 </div>
         </section>
+        <!--update end-->
 </body>
 <FOOter>
     <h1>Be Humble</h1>
