--- a/index.html
+++ b/index.html
@@ -42,6 +42,9 @@
                         <div class="box">
                             <h2>2000tk</h2>
                         </div>
+                        <div class="box">
+                            <h2>3000tk</h2>
+                        </div>
                     </div>
                  <p>other Amount(Taka)</p>
              </div>
